# docs/openapi.yaml
@@ -105,9 +105,73 @@ paths:
     get:
       tags:
       - Device-Library
-      summary: List all devices
-      description: Get the complete list of all devices from the device library
+      summary: List devices
+      description: Get a list of devices from the device library
       operationId: listDevices
+      parameters:
+      - name: name
+        in: query
+        schema:
+          type: string
+      responses:
+        "401":
+          description: Unauthorized
+        "403":
+          description: Invalid User
+        "500":
+          description: Server Error
+        "200":
+          description: List of devices
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/DeviceDTO'
+      security:
+      - none: []
+  /deviceLibrary/category:
+    get:
+      tags:
+      - Device-Library
+      summary: List all devices categories
+      description: Get a list of device categories from the device library
+      operationId: listCategoires
+      parameters:
+      - name: name
+        in: query
+        schema:
+          type: string
+      responses:
+        "401":
+          description: Unauthorized
+        "403":
+          description: Invalid User
+        "500":
+          description: Server Error
+        "200":
+          description: List of device categories
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/DeviceCategoryDTO'
+      security:
+      - none: []
+  /deviceLibrary/category/{categoryId}:
+    get:
+      tags:
+      - Device-Library
+      summary: Device category by Id
+      description: Get a Device category by a Id
+      operationId: getCategoryById
+      parameters:
+      - name: categoryId
+        in: path
+        required: true
+        schema:
+          type: string
       responses:
         "401":
           description: Unauthorized
@@ -116,15 +180,89 @@ paths:
         "500":
           description: Server Error
         "404":
-          description: No devices found
+          description: Device category not found
         "200":
-          description: List of all devices
+          description: Device category
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/DeviceDTO'
+                type: object
+                properties:
+                  deviceId:
+                    type: string
+                  deviceName:
+                    type: string
+                  deviceDescription:
+                    type: string
+                  manufacturer:
+                    type: string
+                  modelNumber:
+                    type: string
+                  powerDraw:
+                    format: int32
+                    type: integer
+                  energyEfficiencyRating:
+                    type: string
+                  weight:
+                    format: float
+                    type: number
+                  categories:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/DeviceCategoryDTO'
+      security:
+      - none: []
+  /deviceLibrary/{deviceId}:
+    get:
+      tags:
+      - Device-Library
+      summary: Device by Id
+      description: Get a device by a Id
+      operationId: getDeviceById
+      parameters:
+      - name: deviceId
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        "401":
+          description: Unauthorized
+        "403":
+          description: Invalid User
+        "500":
+          description: Server Error
+        "404":
+          description: Device not found
+        "200":
+          description: Device
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  deviceId:
+                    type: string
+                  deviceName:
+                    type: string
+                  deviceDescription:
+                    type: string
+                  manufacturer:
+                    type: string
+                  modelNumber:
+                    type: string
+                  powerDraw:
+                    format: int32
+                    type: integer
+                  energyEfficiencyRating:
+                    type: string
+                  weight:
+                    format: float
+                    type: number
+                  categories:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/DeviceCategoryDTO'
       security:
       - none: []
   /household/{householdId}:
@@ -1062,6 +1200,12 @@ components:
           type: string
         joinCode:
           type: string
+        email:
+          type: string
+        firstName:
+          type: string
+        lastName:
+          type: string
     LabelMetaDataDTO:
       type: object
       properties:
@@ -1129,7 +1273,7 @@ components:
     SmartMeterDTO:
       type: object
       properties:
-        smartMeterReaderId:
+        smartMeterId:
           type: string
     SmartMeterDataDTO:
       description: Smart Meter Data
